// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPageNews /> should render correctly and add news is not allow and  with viewerDidAuthor 1`] = `
<ProposalPagestyle__Card>
  <ProposalPagestyle__CategoryContainer>
    <Relay(Connect(ProposalNewsCreateModal))
      displayModal={[Function]}
      proposal={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "id": "proposal1",
          "isProposalAuthorAllowedToAddNews": false,
          "news": Object {
            "edges": Array [
              Object {
                "node": Object {
                  " $fragmentRefs": null,
                  "id": "news1",
                  "title": "Réponse Officielle",
                },
              },
              Object {
                "node": Object {
                  " $fragmentRefs": null,
                  "id": "news2",
                  "title": "Réponse Pas Officielle",
                },
              },
            ],
          },
          "viewerDidAuthor": true,
        }
      }
      show={false}
    />
    <Flex>
      <ProposalPagestyle__CategoryTitle>
        <ProposalPagestyle__CategoryCircledIcon
          paddingLeft={9}
        >
          <Icon
            color="#6c757d"
            name="NEWSPAPER"
            size={20}
          />
        </ProposalPagestyle__CategoryCircledIcon>
        <h3>
          <FormattedMessage
            id="menu.news"
            values={Object {}}
          />
        </h3>
      </ProposalPagestyle__CategoryTitle>
      <Box />
    </Flex>
    <ProposalPageNews__NewsCardHolder>
      <Relay(NewsCard)
        post={
          Object {
            " $fragmentRefs": null,
            "id": "news1",
            "title": "Réponse Officielle",
          }
        }
      />
      <Relay(NewsCard)
        post={
          Object {
            " $fragmentRefs": null,
            "id": "news2",
            "title": "Réponse Pas Officielle",
          }
        }
      />
    </ProposalPageNews__NewsCardHolder>
  </ProposalPagestyle__CategoryContainer>
</ProposalPagestyle__Card>
`;

exports[`<ProposalPageNews /> should render correctly and add news is not allow and  without viewerDidAuthor 1`] = `
<ProposalPagestyle__Card>
  <ProposalPagestyle__CategoryContainer>
    <Relay(Connect(ProposalNewsCreateModal))
      displayModal={[Function]}
      proposal={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "id": "proposal1",
          "isProposalAuthorAllowedToAddNews": false,
          "news": Object {
            "edges": Array [
              Object {
                "node": Object {
                  " $fragmentRefs": null,
                  "id": "news1",
                  "title": "Réponse Officielle",
                },
              },
              Object {
                "node": Object {
                  " $fragmentRefs": null,
                  "id": "news2",
                  "title": "Réponse Pas Officielle",
                },
              },
            ],
          },
          "viewerDidAuthor": false,
        }
      }
      show={false}
    />
    <Flex>
      <ProposalPagestyle__CategoryTitle>
        <ProposalPagestyle__CategoryCircledIcon
          paddingLeft={9}
        >
          <Icon
            color="#6c757d"
            name="NEWSPAPER"
            size={20}
          />
        </ProposalPagestyle__CategoryCircledIcon>
        <h3>
          <FormattedMessage
            id="menu.news"
            values={Object {}}
          />
        </h3>
      </ProposalPagestyle__CategoryTitle>
      <Box />
    </Flex>
    <ProposalPageNews__NewsCardHolder>
      <Relay(NewsCard)
        post={
          Object {
            " $fragmentRefs": null,
            "id": "news1",
            "title": "Réponse Officielle",
          }
        }
      />
      <Relay(NewsCard)
        post={
          Object {
            " $fragmentRefs": null,
            "id": "news2",
            "title": "Réponse Pas Officielle",
          }
        }
      />
    </ProposalPageNews__NewsCardHolder>
  </ProposalPagestyle__CategoryContainer>
</ProposalPagestyle__Card>
`;

exports[`<ProposalPageNews /> should render correctly with viewerDidAuthor 1`] = `
<ProposalPagestyle__Card>
  <ProposalPagestyle__CategoryContainer>
    <Relay(Connect(ProposalNewsCreateModal))
      displayModal={[Function]}
      proposal={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "id": "proposal1",
          "isProposalAuthorAllowedToAddNews": true,
          "news": Object {
            "edges": Array [
              Object {
                "node": Object {
                  " $fragmentRefs": null,
                  "id": "news1",
                  "title": "Réponse Officielle",
                },
              },
              Object {
                "node": Object {
                  " $fragmentRefs": null,
                  "id": "news2",
                  "title": "Réponse Pas Officielle",
                },
              },
            ],
          },
          "viewerDidAuthor": true,
        }
      }
      show={false}
    />
    <Flex>
      <ProposalPagestyle__CategoryTitle>
        <ProposalPagestyle__CategoryCircledIcon
          paddingLeft={9}
        >
          <Icon
            color="#6c757d"
            name="NEWSPAPER"
            size={20}
          />
        </ProposalPagestyle__CategoryCircledIcon>
        <h3>
          <FormattedMessage
            id="menu.news"
            values={Object {}}
          />
        </h3>
      </ProposalPagestyle__CategoryTitle>
      <Box>
        <Button
          className="mb-20"
          id="add-proposal-news"
          leftIcon="ADD"
          onClick={[Function]}
          variant="secondary"
          variantColor="primary"
          variantSize="small"
        >
          <FormattedMessage
            id="global.add"
            values={Object {}}
          />
        </Button>
      </Box>
    </Flex>
    <ProposalPageNews__NewsCardHolder>
      <Relay(NewsCard)
        post={
          Object {
            " $fragmentRefs": null,
            "id": "news1",
            "title": "Réponse Officielle",
          }
        }
      />
      <Relay(NewsCard)
        post={
          Object {
            " $fragmentRefs": null,
            "id": "news2",
            "title": "Réponse Pas Officielle",
          }
        }
      />
    </ProposalPageNews__NewsCardHolder>
  </ProposalPagestyle__CategoryContainer>
</ProposalPagestyle__Card>
`;

exports[`<ProposalPageNews /> should render correctly without news and  with viewerDidAuthor 1`] = `
<ProposalPagestyle__Card>
  <ProposalPagestyle__CategoryContainer>
    <Relay(Connect(ProposalNewsCreateModal))
      displayModal={[Function]}
      proposal={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "id": "proposal1",
          "isProposalAuthorAllowedToAddNews": true,
          "news": Object {
            "edges": Array [],
          },
          "viewerDidAuthor": true,
        }
      }
      show={false}
    />
    <Flex>
      <ProposalPagestyle__CategoryTitle>
        <ProposalPagestyle__CategoryCircledIcon
          paddingLeft={9}
        >
          <Icon
            color="#6c757d"
            name="NEWSPAPER"
            size={20}
          />
        </ProposalPagestyle__CategoryCircledIcon>
        <h3>
          <FormattedMessage
            id="proposal.admin.news"
            values={Object {}}
          />
        </h3>
      </ProposalPagestyle__CategoryTitle>
      <Box />
    </Flex>
    <ProposalPageNews__NewsCardHolder>
      <Card
        alignContent="center"
        as={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        backgroundColor="#fafafa"
        border="none"
        flexDirection="column"
        height="100%"
        id="card-add-proposal-news"
        justifyContent="center"
        pb={91}
        pt={70}
        textAlign="center"
        width="100%"
      >
        <Icon
          color="#BEC4CB"
          name="NEWSPAPER"
          size={40}
        />
        <h4
          color="gray.900"
        >
          <FormattedMessage
            id="add-proposal-news"
            values={Object {}}
          />
        </h4>
        <Text
          color="gray.600"
          fontSize={14}
        >
          <FormattedMessage
            id="proposal-news-body"
            values={Object {}}
          />
        </Text>
        <Button
          id="add-proposal-news"
          leftIcon="ADD"
          margin="auto"
          mt={3}
          onClick={[Function]}
          variant="primary"
          variantColor="primary"
          variantSize="small"
        >
          <FormattedMessage
            id="global.add"
            values={Object {}}
          />
        </Button>
      </Card>
    </ProposalPageNews__NewsCardHolder>
  </ProposalPagestyle__CategoryContainer>
</ProposalPagestyle__Card>
`;

exports[`<ProposalPageNews /> should render correctly without news and  without viewerDidAuthor 1`] = `""`;

exports[`<ProposalPageNews /> should render correctly without news and add news is not allow and  with viewerDidAuthor 1`] = `""`;

exports[`<ProposalPageNews /> should render correctly without news and add news is not allow and  without viewerDidAuthor 1`] = `""`;

exports[`<ProposalPageNews /> should render correctly without viewerDidAuthor 1`] = `
<ProposalPagestyle__Card>
  <ProposalPagestyle__CategoryContainer>
    <Relay(Connect(ProposalNewsCreateModal))
      displayModal={[Function]}
      proposal={
        Object {
          " $fragmentRefs": null,
          " $refType": null,
          "id": "proposal1",
          "isProposalAuthorAllowedToAddNews": true,
          "news": Object {
            "edges": Array [
              Object {
                "node": Object {
                  " $fragmentRefs": null,
                  "id": "news1",
                  "title": "Réponse Officielle",
                },
              },
              Object {
                "node": Object {
                  " $fragmentRefs": null,
                  "id": "news2",
                  "title": "Réponse Pas Officielle",
                },
              },
            ],
          },
          "viewerDidAuthor": false,
        }
      }
      show={false}
    />
    <Flex>
      <ProposalPagestyle__CategoryTitle>
        <ProposalPagestyle__CategoryCircledIcon
          paddingLeft={9}
        >
          <Icon
            color="#6c757d"
            name="NEWSPAPER"
            size={20}
          />
        </ProposalPagestyle__CategoryCircledIcon>
        <h3>
          <FormattedMessage
            id="menu.news"
            values={Object {}}
          />
        </h3>
      </ProposalPagestyle__CategoryTitle>
      <Box />
    </Flex>
    <ProposalPageNews__NewsCardHolder>
      <Relay(NewsCard)
        post={
          Object {
            " $fragmentRefs": null,
            "id": "news1",
            "title": "Réponse Officielle",
          }
        }
      />
      <Relay(NewsCard)
        post={
          Object {
            " $fragmentRefs": null,
            "id": "news2",
            "title": "Réponse Pas Officielle",
          }
        }
      />
    </ProposalPageNews__NewsCardHolder>
  </ProposalPagestyle__CategoryContainer>
</ProposalPagestyle__Card>
`;
